# obsidian-note-linker-with-previewer

./: .gitignore  .gitmodules  Cargo.toml  DEV.md  README.md  cache.json  esbuild.config.mjs  flake.nix  main.ts  manifest.json  package.json  styles.css
.github/workflows/: rust.yml
src/: error.rs  lib.rs  md.pest  obsidian.rs  parser.rs  prelude.rs
src/parser/: md.pest  mod.rs
src/rust/: error.rs  lib.rs  obsidian.rs
src/rust/link_finder/: mod.rs
src/rust/parser/: md.pest  mod.rs
src/rust/settings/: mod.rs
src/rust/vault/: mod.rs
src/scripts/: check_ver.sh  next_ver.sh
src/typescript/: main.ts  modal.css
