[package]
name = "obsidian-linker-plugin"
version = "0.1.0"
authors = ["Nick Allison <nick@allisontech.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.49"
pest = "2.6"
pest_derive = "2.6"
serde_yaml = "0.9.34"

thiserror = "1"

[dev-dependencies]
anyhow = "1"