[package]
name = "obsidian-note-linker-with-previewer"
version = "0.1.0"
authors = ["Nick Allison <nick@allisontech.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
wasm-bindgen = "0.2.88"
js-sys = "0.3.49"
pest = "2.6"
pest_derive = "2.6"
serde_yaml = "0.9.34"
getrandom = { version = "0.2", features = ["js"] }
thiserror = "1"
regex = "1.10.5"

[dev-dependencies]
anyhow = "1"
wasm-bindgen-test = "0.3.0"
include_dir = "0.7.4"